Centered the elements

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 </head>
 
 <body>
+    <!-- Title -->
+    <h1>Unsplash API - Infinite Scroll</h1>
+
+    <!-- Loader -->
+    <div class="loader" id="loader" hidden>
+        <img src="Blocks@1x-1.0s-200px-200px.svg" alt="Loading">
+    </div>
 
     <!-- script -->
     <script src="script.js"></script>
