Added responsive layout

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
     <div class="loader" id="loader" hidden>
         <img src="Blocks@1x-1.0s-200px-200px.svg" alt="Loading">
     </div>
-
+    <!-- image Container -->
+    <div class="image-container" id="image-container">
+        <img src="https://images.pexels.com/photos/1659438/pexels-photo-1659438.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="">
+        <img src="https://images.pexels.com/photos/1659438/pexels-photo-1659438.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="">
+    </div>
     <!-- script -->
     <script src="script.js"></script>
 </body>
