--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <h1>Unsplash API - Infinite Scroll</h1>
 
     <!-- Loader -->
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
         <img src="Blocks@1x-1.0s-200px-200px.svg" alt="Loading">
     </div>
     <!-- image Container -->
     <div class="image-container" id="image-container">
-       
+
     </div>
     <!-- script -->
     <script src="script.js"></script>
